--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,13 +1,13 @@
 .profile__avatar {
   border-radius: 50%;
-  width: 100%;
+  width: 120px;
   max-width: 120px;
   height: 120px;
+  max-height: 120px;
   margin-right: 30px;
   object-fit: cover;
-  background-size: contain;
+  background-size: cover;
 }
-
 
 @media (max-width: 539px) {
   .profile__avatar {
