--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 @import url("./blocks/page/page.css");
 @import url("./blocks/header/header.css");
 @import url("./blocks/header/__logo/header__logo.css");
+@import url("./blocks/header/__sing/header__sing.css");
+@import url("./blocks/header/__link/header__link.css");
+@import url("./blocks/header/__link/__link_invisible/header__link_invisible.css");
+@import url("./blocks/header/__text/header__text.css");
 @import url("./blocks/profile/profile.css");
 @import url("./blocks/profile/__add-button/profile__add-button.css");
 @import url("./blocks/profile/__avatar/profile__avatar.css");
@@ -42,3 +46,16 @@
 @import url("./blocks/popup/__label/popup__label.css");
 @import url("./blocks/popup/__error/popup__error.css");
 @import url("./blocks/popup/_type/_image-preview/popup_type_image-preview.css");
+@import url("./blocks/popup/__icon/popup__icon.css");
+@import url("./blocks/login/login.css");
+@import url("./blocks/login/__button/login__button.css");
+@import url("./blocks/login/__input/login__input.css");
+@import url("./blocks/login/__title/login__title.css");
+@import url("./blocks/login/__form/login__form.css");
+@import url("./blocks/login/__text/login__text.css");
+@import url("./blocks/register/register.css");
+@import url("./blocks/register/__button/register__button.css");
+@import url("./blocks/register/__input/register__input.css");
+@import url("./blocks/register/__text/register__text.css");
+@import url("./blocks/register/__title/register__title.css");
+
